# HW_web1

./: AddressBookLogick.py  Dockerfile  GUI_Interface.py  NotesLogick.py  main.py  pyproject.toml
