[tool.poetry]
name = "hw-web-1"
version = "0.0.1"
description = "This is project with poetry manager"
authors = ["ariia horunzha <1mpellee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

